--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ packages = [
 ipython = "*"
 python = "^3.10"
 reacton = "*"
+typing-extensions = "^4.9.0"
 
 [tool.poetry.group.dev.dependencies]
 black = { extras = ["d"], version = "^24.2.0" }
