--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,7 @@ on: [push]
 
 jobs:
   test:
+    name: Test
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -14,6 +15,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install pre-commit
+        run: pipx install pre-commit
+      - name: Check files with pre-commit
+        run: pre-commit run --all-files
       - name: Install Poetry
         run: |
           curl -sSL https://install.python-poetry.org | python - -y
